[package]
name = "grpc-benchmark"
edition = "2024"
authors = ["gRPC authors"]
license = "MIT"
rust-version = { workspace = true }

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
grpc = { path = "../grpc" }
grpc-protobuf = { path = "../grpc-protobuf" }
hdrhistogram = { version = "7.5", default-features = false }
pico-args = "0.5"
prost = "0.14"
prost-types = "0.14"
protobuf = { version = "4.35.1-release" }
protobuf-well-known-types = { version = "4.35.1-release" }
rustls = "0.23"
tokio = { version = "1.37.0", features = ["sync", "macros"] }
tokio-stream = { version = "0.1.18", features = ["net", "sync"] }
tonic = { path = "../tonic", features = ["tls-aws-lc"] }
tonic-prost = { path = "../tonic-prost" }


[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["resource"] }

[build-dependencies]
grpc-protobuf-build = { path = "../grpc-protobuf-build" }
protobuf-well-known-types = { version = "4.35.1-release" }
protoc-gen-rust-grpc = { path = "../protoc-gen-rust-grpc" }
tonic-prost-build = { path = "../tonic-prost-build" }
